Auth 추가 이제 다 사용 할 수 있습니다.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Yamba1</string>
+    <string name="app_name">Yamba</string>
     
     <string name="titleStatus">Status Update</string>
     <string name="hintText">Please enter your 140-character status</string>
@@ -22,7 +22,15 @@
 	
 	<string name="titleUpdateStatus">Update Status</string>
 	
-	    <!-- Widget title name -->
+	<!-- Widget title name -->
 	<string name="msgLastTimelineUpdate">Last Timeline</string>
+	
+	<string name="makeSetup">You need authenticate your accout for twitter and save token</string>
+	
+    <!-- OAuth -->
+	<string name="titleOAuth">OAuth Authorize</string>
+	<string name="detailOAuth">twitter 서비스를 이용하기 위해서는 사용자 인증을 해야 합니다.
+	    \n버튼을 누르면 사용자 id와 password를 입력하는 화면이 나옵니다.</string>
+	<string name="authrizeOAuth">인증하기</string>
 	
 </resources>
